# Bibliomaniacs

./: README.md  requirements.txt
PlumbingProjectApp/: .gitignore  admin-reviews.jsx  app.json  app.py  cache.py  dump.rdb  email_utils.py  firebaseConfig.js  login.jsx  package-lock.json  package.json  pyproject.toml  requirements.txt  review_model.py  vercel.json
PlumbingProjectApp/app/: _layout.jsx  admin-reviews.jsx  admindashboard.jsx  adminhomepage.jsx  certificate.jsx  chatbot.jsx  dbtest.jsx  explorer.jsx  filedownload.jsx  global.css  homepage.jsx  index.jsx  index.tsx  landingpage.jsx  login.jsx  myreviews.jsx  notfound.jsx  profile.jsx  profilesetup.jsx  reviewmodal.jsx  reviewpage.jsx  setup.py
PlumbingProjectApp/assets/: logo.txt
PlumbingProjectApp/backend/: .gitignore  app.py  cache.py  email_utils.py  model.py  parsing.py  requirements.txt  review_model.py  setup.py
PlumbingProjectApp/backend/recommendationModel/: dump.rdb  main.py  model.py  parsing.py  sentiment.py
PlumbingProjectApp/backend/recommendationModel/housedBooks/: modelIncorp.py
PlumbingProjectApp/components/: requireaccess.jsx
PlumbingProjectApp/frontend/app/: _layout.jsx  admindashboard.jsx  homepage.jsx  index.jsx  landingpage.jsx  login.jsx  myreviews.jsx  package-lock.json  package.json  reviewmodal.jsx
PlumbingProjectApp/recommendationModel/: bigReviews.csv  daily_availability_job.py  embeddings.py  evaluation.py  main.py  model.py  parsing.py  requirements.txt  reviewedBooks.csv  reviews2024.csv
PlumbingProjectApp/recommendationModel/housedBooks/: availability.py  modelIncorp.py
