[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "PEP 621 pyproject.toml schema",
  "type": "object",
  "additionalProperties": false,

  "properties": {
    "build-system": {
      "type": "object",
      "additionalProperties": false,
      "properties": {
        "requires": {
          "type": "array",
          "items": { "type": "string" },
          "minItems": 1
        },
        "build-backend": {
          "type": "string"
        }
      },
      "required": ["requires"]
    },

    "project": {
      "type": "object",
      "additionalProperties": false,
      "properties": {
        "name": { "type": "string" },
        "version": { "type": "string" },
        "description": { "type": "string" },
        "readme": { "type": "string" },
        "requires-python": { "type": "string" },
        "license": {
          "oneOf": [
            { "type": "string" },
            {
              "type": "object",
              "additionalProperties": false,
              "properties": {
                "text": { "type": "string" },
                "file": { "type": "string" }
              },
              "minProperties": 1
            }
          ]
        },
        "authors": {
          "type": "array",
          "items": {
            "type": "object",
            "additionalProperties": false,
            "properties": {
              "name": { "type": "string" },
              "email": { "type": "string", "format": "email" }
            }
          }
        },
        "dependencies": {
          "type": "array",
          "items": { "type": "string" }
        },
        "optional-dependencies": {
          "type": "object",
          "additionalProperties": {
            "type": "array",
            "items": { "type": "string" }
          }
        }
      },
      "required": ["name", "version"]
    },

    "tool": {
      "type": "object"
    }
  },

  "required": ["build-system"]
}